
* Noteworthy changes in release ?.? (????-??-??) [?]

** New features

  du recognizes -d N as equivalent to --max-depth=N, for compatibility
  with FreeBSD.

  sort now accepts the --debug option, to highlight the part of the
  line significant in the sort, and warn about questionable options.

** Changes in behavior

  sort -g now uses long doubles for greater range and precision.

  truncate now supports setting file sizes relative to a reference file.
  Also errors are no longer suppressed for unsupported file types, and
  relative sizes are restricted to supported file types.

* Noteworthy changes in release 8.5 (2010-04-23) [stable]

** Bug fixes

  cp and mv once again support preserving extended attributes.
  [bug introduced in coreutils-8.4]

  cp now preserves "capabilities" when also preserving file ownership.

  ls --color once again honors the 'NORMAL' dircolors directive.
  [bug introduced in coreutils-6.11]

  sort -M now handles abbreviated months that are aligned using blanks
  in the locale database.  Also locales with 8 bit characters are
  handled correctly, including multi byte locales with the caveat
  that multi byte characters are matched case sensitively.

  sort again handles obsolescent key formats (+POS -POS) correctly.
  Previously if -POS was specified, 1 field too many was used in the sort.
  [bug introduced in coreutils-7.2]

** New features

  join now accepts the --header option, to treat the first line of each
  file as a header line to be joined and printed unconditionally.

  timeout now accepts the --kill-after option which sends a kill
  signal to the monitored command if it's still running the specified
  duration after the initial signal was sent.

  who: the "+/-" --mesg (-T) indicator of whether a user/tty is accepting
  messages could be incorrectly listed as "+", when in fact, the user was
  not accepting messages (mesg no).  Before, who would examine only the