@@ -525,6 +525,7 @@ Robert H. de Vries                  robert@and.nl
 Robert Lindgren                     robert@orcafat.com
 Robert Millan                       zeratul2@wanadoo.es
 Robert Schwebel                     r.schwebel@pengutronix.de
+Robin H. Johnson                    robbat2@gentoo.org
 Rogier Wolff                        R.E.Wolff@BitWizard.nl
 Roland Huebner                      ro-huebner@gmx.de
 Roland Turner                       raz.tah.bet@raz.cx
